--- a/apps/main/templates/computers/list.html
+++ b/apps/main/templates/computers/list.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block overlay %}
-  <div class="min-height-300 bg-primary position-absolute w-100"></div>
+  <div class="min-height-300 bg-danger position-absolute w-100"></div>
 {% endblock %}
 
 {% block content %}
@@ -16,7 +16,7 @@
         <div class="card mb-4">
             <div class="card-header pb-0 d-flex justify-content-between align-items-center">
                 <h6>{{ title }}</h6>
-                <a href="{% url 'main:computer_create' %}" class="btn btn-success">Crear nuevo laboratorio</a>
+                <a href="{% url 'main:computer_create' %}" class="btn btn-success">Crear nueva Computadora</a>
               </div>
           <div class="card-body px-0 pt-0 pb-2">
             <div class="table-responsive p-0">
