--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -32,7 +32,7 @@
     <nav id="navbar" class="header__nav collapse">
       <ul class="header__elenco">
         <li class="header__el header__el--blue">
-          <a href="/admin/login/"
+          <a href="/home/accounts/login"
           class="btn btn--white">Iniciar Sesión→</a></li>
       </ul>
     </nav>
