--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -23,7 +23,7 @@
         {% if request.user.is_authenticated %}
           {% if request.user.is_superuser %}
             <li class="nav-item d-flex align-items-center">
-              <a href="{% url 'admin:logout' %}" class="nav-link text-white font-weight-bold px-0">
+              <a href="{% url 'home:logout' %}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none me-3">Salir</span>
               </a>
@@ -36,7 +36,7 @@
             </li>
           {% else %}
             <li class="nav-item d-flex align-items-center">
-              <a href="{% url 'logout' %}" class="nav-link text-white font-weight-bold px-0">
+              <a href="{% url 'home:logout' %}" class="nav-link text-white font-weight-bold px-0">
                 <i class="fa fa-user me-sm-1"></i>
                 <span class="d-sm-inline d-none me-3">Cerrar Sesión</span>
               </a>
