--- a/apps/main/templates/computers/update.html
+++ b/apps/main/templates/computers/update.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block overlay %}
-  <div class="min-height-300 bg-primary position-absolute w-100"></div>
+  <div class="min-height-300 bg-danger position-absolute w-100"></div>
 {% endblock %}
 
 {% block content %}
