--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -16,8 +16,8 @@
           <div class="row">
             <div class="col-8">
               <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">PC Asignadas</p>
-                <h5 class="font-weight-bolder">{{ computers_assigned_count }}</h5>
+                <p class="text-sm mb-0 text-uppercase font-weight-bold">PC Totales</p>
+                <h5 class="font-weight-bolder">{{ computer_count }}</h5>
                 
               </div>
             </div>
@@ -36,8 +36,8 @@
           <div class="row">
             <div class="col-8">
               <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas Asignadas</p>
-                <h5 class="font-weight-bolder">{{ tasks_assigned_count }}</h5>
+                <p class="text-sm mb-0 text-uppercase font-weight-bold">Tareas Totales</p>
+                <h5 class="font-weight-bolder">{{ tasks_count }}</h5>
                 
               </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="col-8">
               <div class="numbers">
                 <p class="text-sm mb-0 text-uppercase font-weight-bold">Recomendaciones</p>
-                <h5 class="font-weight-bolder">{{ recommendations_count }}</h5>
+                <h5 class="font-weight-bolder">{{ reccoms_count }}</h5>
                 
               </div>
             </div>
@@ -76,8 +76,8 @@
           <div class="row">
             <div class="col-8">
               <div class="numbers">
-                <p class="text-sm mb-0 text-uppercase font-weight-bold">Laboratorios Asig</p>
-                <h5 class="font-weight-bolder">{{ lab_count }}</h5>
+                <p class="text-sm mb-0 text-uppercase font-weight-bold">Labs. Totales</p>
+                <h5 class="font-weight-bolder">{{ labs_count }}</h5>
               </div>
             </div>
             <div class="col-4 text-end">
@@ -93,10 +93,10 @@
   <div class="col-lg-7 mb-lg-0 mb-4">
     <div class="card z-index-2 h-100">
       <div class="card-header pb-0 pt-3 bg-transparent">
-        <h6 class="text-capitalize">Tareas realizadas</h6>
+        <h6 class="text-capitalize">Tareas Creadas Mensualmente</h6>
         <p class="text-sm mb-0">
           <i class="fa fa-arrow-up text-success"></i>
-          <span class="font-weight-bold">4% more</span> in 2021
+          <span class="font-weight-bold">FISEI</span> 2024
         </p>
       </div>
       <div class="card-body p-3">
@@ -110,45 +110,22 @@
     <div class="card card-carousel overflow-hidden h-100 p-0">
       <div id="carouselExampleCaptions" class="carousel slide h-100" data-bs-ride="carousel">
         <div class="carousel-inner border-radius-lg h-100">
-          <div class="carousel-item h-100 active" style="background-image: url('{% static 'img/carousel-1.jpg' %}');
-background-size: cover;">
+          <div class="carousel-item h-100 active" style="background-image: url('{% static 'img/fisei.jpg' %}');
+          background-size: 481px 403px;">
             <div class="carousel-caption d-none d-md-block bottom-0 text-start start-0 ms-5">
-              <div class="icon icon-shape icon-sm bg-white text-center border-radius-md mb-3">
-                <i class="ni ni-camera-compact text-dark opacity-10"></i>
-              </div>
-              <h5 class="text-white mb-1">Get started with Argon</h5>
-              <p>There’s nothing I really wanted to do in life that I wasn’t able to get good at.</p>
             </div>
           </div>
-          <div class="carousel-item h-100" style="background-image: url('{% static 'img/carousel-2.jpg' %}');
+          <div class="carousel-item h-100" style="background-image: url('{% static 'img/uta_fisei.jpg' %}');
 background-size: cover;">
             <div class="carousel-caption d-none d-md-block bottom-0 text-start start-0 ms-5">
-              <div class="icon icon-shape icon-sm bg-white text-center border-radius-md mb-3">
-                <i class="ni ni-bulb-61 text-dark opacity-10"></i>
-              </div>
-              <h5 class="text-white mb-1">Faster way to create web pages</h5>
-              <p>That’s my skill. I’m not really specifically talented at anything except for the ability to learn.</p>
             </div>
           </div>
-          <div class="carousel-item h-100" style="background-image: url('{% static 'img/carousel-3.jpg' %}');
+          <div class="carousel-item h-100" style="background-image: url('{% static 'img/lab.jpg' %}');
 background-size: cover;">
             <div class="carousel-caption d-none d-md-block bottom-0 text-start start-0 ms-5">
-              <div class="icon icon-shape icon-sm bg-white text-center border-radius-md mb-3">
-                <i class="ni ni-trophy text-dark opacity-10"></i>
-              </div>
-              <h5 class="text-white mb-1">Share with us your design tips!</h5>
-              <p>Don’t be afraid to be wrong because you can’t learn anything from a compliment.</p>
             </div>
           </div>
         </div>
-        <button class="carousel-control-prev w-5 me-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next w-5 me-3" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
     </div>
   </div>
@@ -168,25 +145,28 @@ background-size: cover;">
 
   var gradientStroke1 = ctx1.createLinearGradient(0, 230, 0, 50);
 
-  gradientStroke1.addColorStop(1, 'rgba(94, 114, 228, 0.2)');
-  gradientStroke1.addColorStop(0.2, 'rgba(94, 114, 228, 0.0)');
-  gradientStroke1.addColorStop(0, 'rgba(94, 114, 228, 0)');
+  gradientStroke1.addColorStop(1, 'rgba(52, 71, 103, 0.2)');
+  gradientStroke1.addColorStop(0.2, 'rgba(52, 71, 103, 0.0)');
+  gradientStroke1.addColorStop(0, 'rgba(52, 71, 103, 0)');
   new Chart(ctx1, {
     type: "line",
     data: {
-      labels: ["Apr", "May", "Jun", "Jul", "Aug", "Sep", "Oct", "Nov", "Dec"],
+      labels: ["Ene", "Feb", "Mar", "Abr", "May", "Jun", "Jul", "Ago", "Sep", "Oct", "Nov", "Dic"],
       datasets: [{
-        label: "Mobile apps",
+        label: "Tareas Creadas",
         tension: 0.4,
         borderWidth: 0,
         pointRadius: 0,
-        borderColor: "#5e72e4",
+        borderColor: "#344767",
         backgroundColor: gradientStroke1,
         borderWidth: 3,
         fill: true,
-        data: [50, 40, 300, 220, 500, 250, 400, 230, 500],
+        data: [
+          {% for entry in tasks_created_monthly %}
+            {{ entry.count }},
+          {% endfor %}
+        ],
         maxBarThickness: 6
-
       }],
     },
     options: {
