--- a/apps/main/templates/computerItems/list.html
+++ b/apps/main/templates/computerItems/list.html
@@ -23,10 +23,11 @@
               <table class="table align-items-center justify-content-center mb-0">
                 <thead>
                   <tr>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" scope="col">#</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">#</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Código</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Tipo</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Comp. Perteneciente</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Usr. Responsable</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Acciones</th>
                     
                   </tr>
@@ -48,6 +49,9 @@
                       </td>
                       <td>
                         <span class="text-xs font-weight-bold">{{ item.id_computer }}</span>
+                      </td>
+                      <td>
+                        <span class="text-xs font-weight-bold">{{ item.id_computer.responsible_user_id }}</span>
                       </td>
                       <td class="align-middle">
                         <a href="{% url 'main:compitem_update' item.id %}" class="btn btn-info">Editar</a>
