--- a/apps/main/templates/labs/list.html
+++ b/apps/main/templates/labs/list.html
@@ -23,9 +23,10 @@
               <table class="table align-items-center justify-content-center mb-0">
                 <thead>
                   <tr>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" scope="col">#</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">#</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Nombre</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Descripción</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Usuario Asig.</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Acciones</th>
                     
                   </tr>
@@ -45,7 +46,9 @@
                       <td>
                         <span class="text-xs font-weight-bold">{{ laboratory.description }}</span>
                       </td>
-
+                      <td>
+                        <p class="text-sm font-weight-bold mb-0">{{ laboratory.responsible_user_id }}</p>
+                      </td>
                       <td class="align-middle">
                         <a href="{% url 'main:laboratory_update' laboratory.id %}" class="btn btn-info">Editar</a>
                       </td>
