--- a/apps/main/templates/recomms/list_all.html
+++ b/apps/main/templates/recomms/list_all.html
@@ -16,17 +16,18 @@
         <div class="card mb-4">
             <div class="card-header pb-0 d-flex justify-content-between align-items-center">
                 <h6>{{ title }}</h6>
-                <a href="{% url 'main:recomm_create' %}" class="btn btn-success">Crear nuevo item</a>
+                <a href="{% url 'main:recomm_create' %}" class="btn btn-success">Crear nueva Recomendación</a>
               </div>
           <div class="card-body px-0 pt-0 pb-2">
             <div class="table-responsive p-0">
               <table class="table align-items-center justify-content-center mb-0">
                 <thead>
                   <tr>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7" scope="col">#</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">#</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Nombre</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Descripción</th>
-                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Fecha</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Usuario</th>
+                    <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Lab. Perteneciente</th>
                     <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2" scope="col">Acciones</th>
                     
                   </tr>
@@ -47,7 +48,10 @@
                         <span class="text-xs font-weight-bold">{{ recommendation.description }}</span>
                       </td>
                       <td>
-                        <span class="text-xs font-weight-bold">{{ recommendation.date }}</span>
+                        <span class="text-xs font-weight-bold">{{ recommendation.user_id }}</span>
+                      </td>
+                      <td>
+                        <span class="text-xs font-weight-bold">{{ recommendation.id_lab }}</span>
                       </td>
                       <td class="align-middle">
                         <a href="{% url 'main:recomm_update' recommendation.id %}" class="btn btn-info">Editar</a>
